# slap-back

./: README.md  main.py  makefile  pyproject.toml  pytest.ini
models/: echo_request.py
test/: conftest.py  test_echo.py  test_lipsum.py
